2010-02-20  Abel Cheung  <abelcheung@gmail.com>

	* scorerender-admin.php:
	- (admin_footer, admin_section_content) Properly set disabled css
	  class for disabled input fields.

2010-02-20  Abel Cheung  <abelcheung@gmail.com>

	* scorerender-admin.php:
	- Encapsulate all functions inside ScoreRenderAdmin class.

2010-02-18  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php:
	- (scorerender_process_content) Drop useless Exception handling
	  which can be replaced by normal logic.
	* scorerender-class.php:
	- (get_notation_name) Stop throwing useless Excepsion.

2010-02-18  Abel Cheung  <abelcheung@gmail.com>

	* misc/tint-image.php:
	- New file, to tint score images using color specified by user.
	* wp-scorerender.php:
	- (scorerender_process_content) Always output image using
	  tint-image.php.

2010-02-18  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php:
	- (scorerender_get_upload_dir) Removed, now that WP 2.6 is required
	  and wp_upload_dir() is pretty much standardized since then.

2010-02-17  Abel Cheung  <abelcheung@gmail.com>

	* scorerender-admin.php:
	- Move icon to images/ folder.
	* wp-scorerender.php, scorerender-admin.php:
	- Use plugins_url() where applicable.

2010-02-17  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php, scorerender-class.php:
	- Rename DEBUG constant to avoid potential name clash.

2010-02-17  Abel Cheung  <abelcheung@gmail.com>

	* MUP magic file setting is replaced by directly entering registration
	  key.
	* wp-scorerender.php:
	- Increase database schema version.
	* notation/mup.php:
	- (set_magic_file) Removed.
	- (set_magic_file_hook) Renamed to more generic set_notation_action().

2010-02-17  Abel Cheung  <abelcheung@gmail.com>

	* scorerender-utils.php:
	- Remove wp_parse_str() backport, as WP 2.2 is no more supported.

2010-02-17  Abel Cheung  <abelcheung@gmail.com>

	* Completely drop 'inverted' setting, introduce 'note_color' setting.