@@ -1,6 +1,11 @@
 2010-02-20  Abel Cheung  <abelcheung@gmail.com>
 
 	* scorerender-admin.php:
+	- Move 'show source' setting to contents section.
+
+2010-02-20  Abel Cheung  <abelcheung@gmail.com>
+
+	* scorerender-admin.php:
 	- (admin_footer, admin_section_content) Properly set disabled css
 	  class for disabled input fields.
 
